add getOrganizationLogo, add/refactor tests
